program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2022\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2023\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -7686,9 +7686,9 @@ msgid "If this hack is enabled, the code will leave the parameter sets as they a
 msgstr "Se questo hack è abilitato, il codice lascerà i parametri così come sono."
 
 #: src/common/hacks.cpp:69
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr "Se questo hack è abilitato, il codice lascerà i parametri così come sono."
+msgstr "Se questo hack è abilitato, non verranno rimossi."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
 #, no-c-format
@@ -8291,9 +8291,9 @@ msgid "Job &output"
 msgstr "Attività destinazione"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "Completato con avvisi"
+msgstr "Attività completata con avvisi"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8306,9 +8306,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "Data e ora fine attività in formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Non riuscita"
+msgstr "Attività fallita"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8324,9 +8324,9 @@ msgid "Job queue"
 msgstr "Coda attività"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "Coda attività"
+msgstr "Coda attività modificata"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8334,9 +8334,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "Data e ora avvio attività in formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "Coda attività"
+msgstr "Attività completata"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9412,7 +9412,7 @@ msgstr "Normalmente gli elementi selezionati nella vista elenco possono essere s
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Normalmentenei testi sottotitoli vengono rimossi all'inizio e alla fine di ogni riga gli spazi e le tabulazioni."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11384,9 +11384,9 @@ msgstr "Visualizza linea riepilogo con statistiche per ogni traccia alla fine"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Mostra informazioni di versione."
+msgstr "Visualizza una notifica sul desktop"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -12983,7 +12983,7 @@ msgstr "L'attività è stata aggiunta alla coda attività."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "È stata completata l'elaborazione della coda attività."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
