program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: BouRock, 2016-2022\n"
+"Last-Translator: BouRock, 2016-2023\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
 "Language: tr\n"
@@ -3010,9 +3010,9 @@ msgid "<Do not change>"
 msgstr "<Değiştirmeyin>"
 
 #: src/common/xml/ebml_chapters_converter.cpp:194
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<EditionDisplay> is missing the <EditionString> child."
-msgstr "<ChapterDisplay> öğesinin <ChapterString> alt öğesi eksik."
+msgstr "<EditionDisplay> öğesinin <EditionString> alt öğesi eksik."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:145
 #, no-c-format
@@ -8247,9 +8247,9 @@ msgid "Job &output"
 msgstr "İş çı&ktısı"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "Uyarılarla tamamlandı"
+msgstr "İş uyarılarla tamamlandı"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8262,9 +8262,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "ISO 8601 biçiminde iş bitiş tarihi ve saati"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Başarısız oldu"
+msgstr "İş başarısız oldu"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8280,9 +8280,9 @@ msgid "Job queue"
 msgstr "İş kuyruğu"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "İş kuyruğu"
+msgstr "İş kuyruğu değişti"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8290,9 +8290,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "ISO 8601 biçiminde iş başlangıç tarihi ve saati"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "İş kuyruğu"
+msgstr "İş başarılı oldu"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -8886,7 +8886,7 @@ msgstr "'{0}' bölümünde tercihlerin değişikliği istendi, ancak dosyada ilg
 #: src/mkvtoolnix-gui/forms/info/tab.h:155
 #, no-c-format
 msgid "Modified:"
-msgstr ""
+msgstr "Değiştirilmiş:"
 
 #: src/common/kax_element_names.cpp:271
 #, no-c-format
@@ -9367,7 +9367,7 @@ msgstr "Normalde liste görünümünde seçilen girişler sürükle ve bırak ar
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Normalde metin altyazılarında her satırın başındaki ve sonundaki boşluklar ve sekmeler kaldırılır."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11328,9 +11328,9 @@ msgstr "Her iz için s&onda istatistikler olan özet bir satır göster"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Sürüm bilgilerini göster."
+msgstr "Bir masaüstü bildirimi göster"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -12921,7 +12921,7 @@ msgstr "İş, iş kuyruğuna eklendi."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "İş kuyruğunun işlenmesi tamamlandı."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
@@ -14121,7 +14121,7 @@ msgstr "Zaman damgası ölçütü"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Bölünmüş kararda kullanılan zaman damgası: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
