--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (74.0.0-0~bunkus01) kinetic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 12 Feb 2023 16:50:58 +0100
+
 mkvtoolnix (73.0.0-0~bunkus01) kinetic; urgency=low
 
   * New version.
