program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Overdrive80 <lukillas.ole@gmail.com>, 2022\n"
+"Last-Translator: José Benigno Santamaría Castro, 2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -7750,9 +7750,9 @@ msgid "If this hack is enabled, the code will leave the parameter sets as they a
 msgstr "Si se activa este hack, el código dejará los parámetros tal y como están."
 
 #: src/common/hacks.cpp:69
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr "Si se activa este hack, el código dejará los parámetros tal y como están."
+msgstr "Si se activa este hack, no se eliminarán."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
 #, no-c-format
@@ -8357,9 +8357,9 @@ msgid "Job &output"
 msgstr "&Resultado"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "Correcto con advertencias"
+msgstr "Trabajo terminado con advertencias"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8372,9 +8372,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "Fecha && hora de finalización de la tarea en formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Erróneo"
+msgstr "Trabajo fallido"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8390,9 +8390,9 @@ msgid "Job queue"
 msgstr "Lista de tareas"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "Lista de tareas"
+msgstr "Cola de trabajos modificada"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8400,9 +8400,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "Fecha && hora de inicio de la tarea en formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "Lista de tareas"
+msgstr "Trabajo realizado"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9478,7 +9478,7 @@ msgstr "Generalmente, los registros seleccionados en la lista visualizada se pue
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Normalmente, en los subtítulos de texto se eliminan los espacios y las tabulaciones del principio y el final de cada línea."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11450,9 +11450,9 @@ msgstr "Mostrar al finalizar, una línea &resumen con estadísticas para cada pi
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Mostrar la información de la versión."
+msgstr "Mostrar una notificación de escritorio"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -13047,7 +13047,7 @@ msgstr "La tarea ha sido añadida a la lista de tareas."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "La cola de trabajos ha terminado de procesarse."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
