AUTHORS: add more translators

--- a/AUTHORS
+++ b/AUTHORS
@@ -142,6 +142,9 @@ John Peebles <johnpeeb@gmail.com>
 Jory Stone <jcsston@toughguy.net>
     * Fixes to mkvinfo's GUI
 
+José Benigno Santamaría Castro <?@?>
+    * Spanish translation
+
 Josh Coalson <j_coalson@yahoo.com>
     * support for libFLAC 1.1.3
 
