program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2022\n"
+"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2023\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -7697,9 +7697,9 @@ msgid "If this hack is enabled, the code will leave the parameter sets as they a
 msgstr "Se este hack estiver ativado, o código deixará os conjuntos de parâmetros como estão."
 
 #: src/common/hacks.cpp:69
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr "Se este hack estiver ativado, o código deixará os conjuntos de parâmetros como estão."
+msgstr "Se este hack estiver ativado, eles não serão removidos."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
 #, no-c-format
@@ -8302,9 +8302,9 @@ msgid "Job &output"
 msgstr "Saída de tarefa"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "Concluído com avisos"
+msgstr "Tarefa concluída com avisos"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8317,9 +8317,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "Data e hora de término da tarefa no formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Falhou"
+msgstr "Tarefa falhou"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8335,9 +8335,9 @@ msgid "Job queue"
 msgstr "Fila de tarefas"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "Fila de tarefas"
+msgstr "Fila de tarefas alterada"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8345,9 +8345,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "Data e hora de início da tarefa no formato ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "Fila de tarefas"
+msgstr "Tarefa bem-sucedida"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9423,7 +9423,7 @@ msgstr "Normalmente, entradas selecionadas na exibição de lista podem ser movi
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Normalmente, espaços e abas são removidos do início e do final de cada linha nas legendas de texto."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11395,9 +11395,9 @@ msgstr "Mostrar uma linha de re&sumo com estatísticas para cada faixa ao final"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Mostra informações da versão."
+msgstr "Mostrar uma notificação na área de trabalho"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -12992,7 +12992,7 @@ msgstr "A tarefa foi adicionada à fila de tarefas."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "A fila de tarefas terminou o processamento."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
