German translation: fix wrong name for --forced-display-flag
Fixes #3488

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.3.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
-"PO-Revision-Date: 2023-01-15 19:25+0100\n"
+"PO-Revision-Date: 2023-02-25 13:15+0100\n"
 "Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
 "Language-Team: German <moritz@bunkus.org>\n"
 "Language: de\n"
@@ -548,7 +548,7 @@ msgid ""
 "                           Sets the \"forced display\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --forced-track-flag <TID[:bool]>\n"
+"  --forced-display-flag <TID[:bool]>\n"
 "                           setzt den Schalter »Anzeige erzwingen« für diese\n"
 "                           Spur oder entfernt ihn, wenn »bool« »0« ist.\n"
 
