program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2023\n"
+"Last-Translator: Andrei Stepanov, 2018-2023\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -5363,7 +5363,7 @@ msgstr "По умолчанию"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2166
 #, no-c-format
 msgid "Default IETF BCP 47 language editing &mode:"
-msgstr "Режим по умолчанию редактирования языка IETF BCP 47:"
+msgstr "Стандар&тный режим правки языка IETF BCP 47:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2225
 #, no-c-format
@@ -8576,7 +8576,7 @@ msgstr "Максимальная яркость:"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2268
 #, no-c-format
 msgid "Maximum number of files:"
-msgstr "Максимальное количество файлов:"
+msgstr "Максимальное число файлов:"
 
 #: src/extract/xtr_rmff.cpp:47
 #, no-c-format
@@ -9291,7 +9291,7 @@ msgstr "Число"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2156
 #, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "Количество запоминаемых недавно использованных записей:"
+msgstr "Число н&едавно использованных записей для запоминания:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
@@ -15024,7 +15024,7 @@ msgstr "При &добавлении файлов:"
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:303
 #, no-c-format
 msgid "When &finished…"
-msgstr "После &завершения..."
+msgstr "По з&авершении…"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:390
 #, no-c-format
