program translations: update Czech

--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Pavel Rehak <pavel-rehak@email.cz>, 2019,2021-2022\n"
+"Last-Translator: Pavel Rehak <pavel-rehak@email.cz>, 2019,2021-2023\n"
 "Language-Team: Czech (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/cs/)\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
@@ -1513,16 +1513,16 @@ msgid "\"Text descriptions\" flag:"
 msgstr "Příznak „textové popisky“:"
 
 #: src/common/property_element.cpp:135
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "\"Track enabled\" flag"
-msgstr "Příznak 'Povolená stopa'"
+msgstr "Příznak „povolená stopa“"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:312
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2207
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "\"Track enabled\" flag:"
-msgstr "Příznak 'Povolená stopa'"
+msgstr "Příznak „povolená stopa“:"
 
 #: src/common/kax_element_names.cpp:217
 #: src/common/property_element.cpp:140
@@ -1932,9 +1932,9 @@ msgid "&Expand all"
 msgstr "&Rozbalit vše"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:392
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Rozšířené podštítky"
+msgstr "Rozšíř&ené označení jazyka:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:670
 #, no-c-format
@@ -7825,9 +7825,9 @@ msgid "Information"
 msgstr "Informace"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:397
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Informace"
+msgstr "Informace a výstrahy:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
