--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (75.0.0-0~bunkus01) kinetic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 26 Mar 2023 18:44:01 +0200
+
 mkvtoolnix (74.0.0-0~bunkus01) kinetic; urgency=low
 
   * New version.
