program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: José Benigno Santamaría Castro, 2023\n"
+"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -8359,7 +8359,7 @@ msgstr "&Resultado"
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
 #, no-c-format
 msgid "Job completed with warnings"
-msgstr "Trabajo terminado con advertencias"
+msgstr "Tarea finalizada con advertencias"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8374,7 +8374,7 @@ msgstr "Fecha && hora de finalización de la tarea en formato ISO 8601"
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
 #, no-c-format
 msgid "Job failed"
-msgstr "Trabajo fallido"
+msgstr "Tarea abortada"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8392,7 +8392,7 @@ msgstr "Lista de tareas"
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
 #, no-c-format
 msgid "Job queue changed"
-msgstr "Cola de trabajos modificada"
+msgstr "Cola de tareas modificada"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8402,7 +8402,7 @@ msgstr "Fecha && hora de inicio de la tarea en formato ISO 8601"
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
 #, no-c-format
 msgid "Job succeeded"
-msgstr "Trabajo realizado"
+msgstr "Tarea realizada"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9478,7 +9478,7 @@ msgstr "Generalmente, los registros seleccionados en la lista visualizada se pue
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr "Normalmente, en los subtítulos de texto se eliminan los espacios y las tabulaciones del principio y el final de cada línea."
+msgstr "Normalmente, en los subtítulos de texto se eliminan los espacios y las tabulaciones, al principio y al final, de cada línea."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -13047,7 +13047,7 @@ msgstr "La tarea ha sido añadida a la lista de tareas."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr "La cola de trabajos ha terminado de procesarse."
+msgstr "La cola de tareas ha terminado de procesarse."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
@@ -13671,7 +13671,7 @@ msgstr "Los parámetros de la pista no coinciden."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:435
 #, no-c-format
 msgid "The track properties on the \"input\" tab can be laid out in three different way in order to serve different workflows."
-msgstr "Las propiedades de la pista en la pestaña \"Entrada\" se pueden colocar de tres maneras distintas a fin de satisfacer diferentes maneras de trabajo."
+msgstr "Las propiedades de la pista en la pestaña \"entrada\" se pueden colocar de tres formas diferentes para servir a distintos flujos de trabajo."
 
 #: src/merge/output_control.cpp:998
 #, no-c-format
@@ -14872,7 +14872,7 @@ msgstr "Opciones para todos los tipos de tareas"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:248
 #, no-c-format
 msgid "Variables for multiplex jobs"
-msgstr "Opciones para trabajos de multiplexación"
+msgstr "Opciones para tareas de multiplexación"
 
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:218
 #, no-c-format
